RegressionTests/TestSuiteExport/reject/invalid_yield.blade
// EXPECT: fail
// DIAGNOSTICS: InvalidYieldUsage

fn f() void {
    yield;
}